structure html & css complete start javascript
daje

--- a/index.html
+++ b/index.html
@@ -35,7 +35,90 @@
         <!-- /header -->
     
         <main>
-    
+            <div class="container-icone">
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-cat"></i>
+                    <p>Sono un gatto</p>
+                </div>
+
+
+            </div>
         </main>
 
 
