function printTutto = indefined
Whyyyyyyyyyyyyy????

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- /header -->
     
         <main>
-            <div class="container-icone">
+            <div id='print-tutto' class="container-icone">
                 <div class="icon">
                     <i class="fas fa-cat"></i>
                     <p>Sono un gatto</p>
