--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        se vedi viola, sono il container
+        sono il container totale
         <header>
             <!-- start header-top -->
             <div class="header-top">
@@ -36,10 +36,6 @@
     
         <main>
             <div id='print-tutto' class="container-icone">
-                <div class="icon">
-                    <i class="fas fa-cat"></i>
-                    <p>Sono un gatto</p>
-                </div>
                 
 
 
