Push exercise complete
Exercise finished

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="choice">
                     <label for="tipo">Scegli cosa ci vuoi scrivere</label>
                     <!-- Qua metto solo una option nella select perché le voglio aggiungere dal javascript -->
-                    <select name="tipo" id="tipo">
+                    <select name="tipo" id="selezione">
                         <option value="all">All</option>
                     </select>
                 </div>
