push prova with img

--- a/Esercizio js6 provato con le img/index.html
+++ b/Esercizio js6 provato con le img/index.html
@@ -17,18 +17,15 @@
 
 <body>
     <div class="container">
-        sono il container totale
         <header>
             <!-- start header-top -->
-            <div class="header-top">
-                Qui ci va il logo
-            </div>
+            
             <!-- /header-top -->
 
             <!-- start header bottom -->
             <div class="header-bottom">
                 <div class="choice">
-                    <label for="tipo">Scegli cosa ci vuoi scrivere</label>
+                    <label for="tipo">Hall of Fame</label>
                     <!-- Qua metto solo una option nella select perché le voglio aggiungere dal javascript -->
                     <select name="tipo" id="selezione">
                         <option value="all">All</option>
